# arbitrage-runtime

./: .env.example  .gitignore  Cargo.toml  README.md  railway.json  runtime_adversarial_report.json  runtime_baseline_report.json
.cargo/: config.toml
contracts/: ArbitrageRuntimeExecutor.sol  ArbitrageRuntimeExecutorV2.sol  ArbitrageRuntimeExecutorV3.sol
contracts/base/: ArbitrageRuntimeExecutorBase.sol
contracts/interfaces/: IArbitrageRuntimeExecutor.sol
docs/: selector_pool_reports.sql
docs/benchmarks/: README.md  latency_projection.md  runtime-load-test.env.example  runtime_adversarial_report.json  runtime_baseline_report.json
exports/: runtime_latency_benchmarks.bsc.adversarial.windows.20260520T171129Z.json  runtime_latency_benchmarks.json
scripts/: linux-war-validation.sh
src/: benchmark.rs  config.rs  dashboard.rs  main.rs  replay.rs  rpc.rs  storage.rs  wallets.rs
src/mev/: adaptive.rs  mod.rs  opportunity.rs  runtime.rs
src/mev/amm/: uniswap_v2.rs  uniswap_v3.rs
src/mev/cache/: mod.rs  pool_cache.rs
src/mev/decoder/: simd.rs
src/mev/execution/: contract_encoder.rs  executor.rs  flashloan_builder.rs  mod.rs  payload_builder.rs  pinning.rs
src/mev/network/: ingest.rs
src/mev/pnl/: tracker.rs
src/mev/simulation/: mod.rs  state_simulator.rs
web/static/: index.html  styles.css
web/static/js/: app.js  data.js
